# quantum-rsa-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: n35-optimal-base-analysis.md  paper-draft-ja.md  quantum-crypto-implementation.md  r4-scaling-experiment.md  roadmap.md
docs/references/: README.md
docs/references/algorithms/: shor-algorithm.md  shor-implementation-comparison.md
docs/references/circuits/: margolus-gate.md  n21-optimized-circuit.md
docs/references/hardware/: real-hardware-guide.md
docs/references/papers/: shor-n21-skosana-2021.md  shor-world-record.md
docs/reports/: 2026-01-30-ankaa3-n21-execution.md  2026-01-31-ankaa3-n35-execution.md  2026-01-31-n35-comparison-report.md
notebooks/: shots_vs_success.ipynb
scripts/: generate_figure.py  run_grover_attack.py  run_n35_experiments.py  run_pqc_demo.py  run_r4_scaling_experiments.py
src/quantum_crypto/: __init__.py  experiment_logging.py  runner.py  shor_demo.py  utils.py
src/quantum_crypto/algorithms/: __init__.py  quantum.py
src/quantum_crypto/backends/: aws_braket.py  ibm_quantum.py
src/quantum_crypto/grover/: __init__.py  core.py  oracles.py  toy_cipher.py
src/quantum_crypto/modexp/: __init__.py  n143_a34_r4_optimized.py  n15.py  n185_a6_r4_optimized.py  n21.py  n21_optimized.py  n35_a6_optimized.py  n35_a8_optimized.py  n91_a8_r4_optimized.py
src/quantum_crypto/pqc/: __init__.py  benchmark.py  hybrid.py  kem.py  signatures.py  utils.py
src/quantum_rsa/: __init__.py  core.py  experiment_logging.py  shor_demo.py
src/quantum_rsa/algorithms/: classical.py
src/quantum_rsa/backends/: __init__.py  base.py  simulator.py
src/quantum_rsa/modexp/: n15.py  n21.py  n33.py
tests/: __init__.py  test_experiment_logging.py  test_modexp.py  test_shor_demo.py
